--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,6 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+webrick:
+  headers:
+    Cache-Control: public, max-age=110
